Istio/06-AuthorizationPolicy/03-target-deployments/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - uri:
            exact: /helloworld
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8080
      rewrite:
        uri: "/"
    - match:
        - uri:
            exact: /byeworld
      route:
        - destination:
            host: byeworld.foo.svc.cluster.local
            port:
              number: 9090
      rewrite:
        uri: "/"
